--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,11 +31,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/MilkyWay.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mssql-jdbc-6.2.2.jre8.jar=C:\\Users\\hoang\\Documents\\NetBeansProjects\\vanvhph13971_LapTrinhCity\\dist\\lib\\mssql-jdbc-6.2.2.jre8.jar
 file.reference.mssql-jdbc-9.2.1.jre8.jar=D:\\java3\\sqljdbc_9.2.1.0_enu\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mssql-jdbc-9.2.1.jre8.jar}
+    ${file.reference.mssql-jdbc-9.2.1.jre8.jar}:\
+    ${file.reference.mssql-jdbc-6.2.2.jre8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
