--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,8 @@ file.reference.mssql-jdbc-9.2.1.jre8.jar=D:\\java3\\sqljdbc_9.2.1.0_enu\\sqljdbc
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mssql-jdbc-9.2.1.jre8.jar}
+    ${file.reference.mssql-jdbc-9.2.1.jre8.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
