--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,6 +41,7 @@ file.reference.bridj-0.7.0.jar=libs\\bridj-0.7.0.jar
 file.reference.core-3.3.0.jar=libs\\core-3.3.0.jar
 file.reference.javase-3.3.0.jar=libs\\javase-3.3.0.jar
 file.reference.javax.mail.jar=C:\\Users\\hoang\\Downloads\\javax.mail.jar
+file.reference.javax.mail.jar-1=libs\\javax.mail.jar
 file.reference.jcalendar-1.4.jar=libs\\jcalendar-1.4.jar
 file.reference.log4j-1.2.17.jar=libs\\log4j-1.2.17.jar
 file.reference.mssql-jdbc-6.2.2.jre8.jar=C:\\Users\\hoang\\Documents\\NetBeansProjects\\vanvhph13971_LapTrinhCity\\dist\\lib\\mssql-jdbc-6.2.2.jre8.jar
@@ -68,7 +69,9 @@ javac.classpath=\
     ${file.reference.log4j-1.2.17.jar}:\
     ${file.reference.slf4j-log4j12-1.6.2.jar}:\
     ${file.reference.AbsoluteLayout.jar}:\
-<<<<<<< HEAD
+    <<<<<<< HEAD:\
+    ${file.reference.javax.mail.jar-1}:\
+    ${file.reference.barcode4j.jar}
     ${file.reference.activation-1.0.2.jar}:\
     ${file.reference.zxing-1.7-javase.jar}:\
     ${file.reference.zxing-2.0-core.jar}:\
