--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,6 +43,9 @@ file.reference.barcodes-7.1.3-javadoc.jar=libs/barcodes-7.1.3-javadoc.jar
 file.reference.barcodes-7.1.3-sources.jar=libs/barcodes-7.1.3-sources.jar
 file.reference.barcodes-7.1.3.jar=libs/barcodes-7.1.3.jar
 file.reference.bridj-0.7.0.jar=libs/bridj-0.7.0.jar
+file.reference.commons-codec-1.15.jar=libs\\commons-codec-1.15.jar
+file.reference.commons-collections4-4.4.jar=libs\\commons-collections4-4.4.jar
+file.reference.commons-compress-1.20.jar=libs\\commons-compress-1.20.jar
 file.reference.core-3.3.0.jar=libs/core-3.3.0.jar
 file.reference.font-asian-7.1.3.jar=libs/font-asian-7.1.3.jar
 file.reference.forms-7.1.3-javadoc.jar=libs/forms-7.1.3-javadoc.jar
@@ -73,6 +76,9 @@ file.reference.pdfa-7.1.3.jar=libs/pdfa-7.1.3.jar
 file.reference.pdftest-7.1.3-javadoc.jar=libs/pdftest-7.1.3-javadoc.jar
 file.reference.pdftest-7.1.3-sources.jar=libs/pdftest-7.1.3-sources.jar
 file.reference.pdftest-7.1.3.jar=libs/pdftest-7.1.3.jar
+file.reference.poi-5.0.0.jar=libs\\poi-5.0.0.jar
+file.reference.poi-ooxml-5.0.0.jar=libs\\poi-ooxml-5.0.0.jar
+file.reference.poi-ooxml-lite-5.0.0.jar=libs\\poi-ooxml-lite-5.0.0.jar
 file.reference.sign-7.1.3-javadoc.jar=libs/sign-7.1.3-javadoc.jar
 file.reference.sign-7.1.3-sources.jar=libs/sign-7.1.3-sources.jar
 file.reference.sign-7.1.3.jar=libs/sign-7.1.3.jar
@@ -85,6 +91,7 @@ file.reference.svg-7.1.3-javadoc.jar=libs/svg-7.1.3-javadoc.jar
 file.reference.svg-7.1.3-sources.jar=libs/svg-7.1.3-sources.jar
 file.reference.svg-7.1.3.jar=libs/svg-7.1.3.jar
 file.reference.webcam-capture-0.3.12.jar=libs/webcam-capture-0.3.12.jar
+file.reference.xmlbeans-4.0.0.jar=libs\\xmlbeans-4.0.0.jar
 file.reference.zxing-1.7-javase.jar=C:\\Users\\hoang\\Desktop\\zxing[ZaloPC_Folder]\\zxing-1.7-javase.jar
 file.reference.zxing-2.0-core.jar=C:\\Users\\hoang\\Desktop\\zxing[ZaloPC_Folder]\\zxing-2.0-core.jar
 file.reference.zxing-2.1.jar=C:\\Users\\hoang\\Desktop\\zxing[ZaloPC_Folder]\\zxing-2.1.jar
@@ -135,7 +142,14 @@ javac.classpath=\
     ${file.reference.svg-7.1.3-javadoc.jar}:\
     ${file.reference.svg-7.1.3-sources.jar}:\
     ${file.reference.svg-7.1.3.jar}:\
-    ${file.reference.webcam-capture-0.3.12.jar}
+    ${file.reference.webcam-capture-0.3.12.jar}:\
+    ${file.reference.poi-5.0.0.jar}:\
+    ${file.reference.poi-ooxml-5.0.0.jar}:\
+    ${file.reference.poi-ooxml-lite-5.0.0.jar}:\
+    ${file.reference.commons-codec-1.15.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-compress-1.20.jar}:\
+    ${file.reference.xmlbeans-4.0.0.jar}
     ${file.reference.activation-1.0.2.jar}:\
     ${file.reference.zxing-1.7-javase.jar}:\
     ${file.reference.zxing-2.0-core.jar}:\
